Hiding posts under draft through hidden flag.

--- a/_posts/2016-04-02-NEW.markdown
+++ b/_posts/2016-04-02-NEW.markdown
@@ -4,6 +4,7 @@ title: Cracking Google's Creative 5 Application
 tags: creative5
 summary: "So the other day my boss forwards me this link, saying 'Google wants you to play with their home page as part of a job application.' I open the link and I'm greeted with a doodled Google page, plus some instructions..."
 image: /assets/2016-04-02/hero.jpg
+hidden: true
 ---
 
 So the other day my boss forwards me this link, saying "Google wants you to play with their home page as part of a job application." I open the link and I'm greeted with a doodled Google page, plus some instructions:
